--- a/dotnet-webapi/src/API/config.ini
+++ b/dotnet-webapi/src/API/config.ini
@@ -1,5 +1,5 @@
 [aws_config]
 aws_service_name = textract
-aws_region_name = us-east-1
+aws_region_name = <your-aws-region>
 aws_access_key_id = <your-aws-key-id>
 aws_secret_access_key = <your-aws-access-key>
